<!--
~ Copyright 2011 JBoss Inc
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~       http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.socraticgrid</groupId>
        <artifactId>CDSA</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>clinical-decision-support-agent</artifactId>
    <packaging>war</packaging>

    <name>SG :: Clinical Decision Support Agent Service Web</name>


    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <db.driverClass>org.h2.Driver</db.driverClass>
                <db.connectionURL>jdbc:h2:tcp://localhost/~/mydb</db.connectionURL>
                <db.username>sa</db.username>
                <db.password>sasa</db.password>
                <db.dialect>org.hibernate.dialect.H2Dialect</db.dialect>
                <agent.name>clinical-decision-support-agent</agent.name>
                <agent.node>clinical-decision-support-agent-localnode</agent.node>
                <agent.sub.node>clinical-decision-support-agent-subnode</agent.sub.node>
                <agent.port>8000</agent.port>
                <agent.endpoint.ip>localhost</agent.endpoint.ip>
                <agent.endpoint.port>8082</agent.endpoint.port>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <db.driverClass>com.mysql.jdbc.Driver</db.driverClass>
                <db.connectionURL>jdbc:mysql://192.168.5.47:3306/drools-grid</db.connectionURL>
                <db.username>kmruser</db.username>
                <db.password>kmrpass</db.password>
                <db.dialect>org.hibernate.dialect.MySQL5Dialect</db.dialect>
                <agent.name>clinical-decision-support-agent</agent.name>
                <agent.node>clinical-decision-support-agent-localnode</agent.node>
                <agent.sub.node>clinical-decision-support-agent-subnode</agent.sub.node>
                <agent.port>8007</agent.port>
                <agent.endpoint.ip>184.191.173.235</agent.endpoint.ip>
                <agent.endpoint.port>8082</agent.endpoint.port>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>mysql</groupId>
                    <artifactId>mysql-connector-java</artifactId>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <endorsed.dir>${project.build.directory}</endorsed.dir>
    </properties>

    <dependencies>
        
        <!-- Internal dependencies -->
        <dependency>
            <groupId>org.socraticgrid</groupId>
            <artifactId>sg-fact-model</artifactId>
        </dependency>


        <!-- Drools dependencies -->
        <dependency>
            <groupId>org.drools.mas</groupId>
            <artifactId>drools-mas-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.drools.mas</groupId>
            <artifactId>drools-mas-acl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.drools.mas</groupId>
            <artifactId>drools-mas-generic-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-informer-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-informer-interaction</artifactId>
        </dependency>
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-pmml</artifactId>
        </dependency>
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-grid-impl</artifactId>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>hibernate-commons-annotations</artifactId>
                    <groupId>org.hibernate</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>hibernate-annotations</artifactId>
                    <groupId>org.hibernate</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <!-- jBPM dependencies -->
        <dependency>
            <groupId>org.jbpm</groupId>
            <artifactId>jbpm-bpmn2</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.drools</groupId>
                    <artifactId>knowledge-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.drools</groupId>
                    <artifactId>drools-compiler</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.drools</groupId>
                    <artifactId>drools-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.jbpm</groupId>
            <artifactId>jbpm-flow</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.drools</groupId>
                    <artifactId>knowledge-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.drools</groupId>
                    <artifactId>drools-compiler</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.drools</groupId>
                    <artifactId>drools-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.jbpm</groupId>
            <artifactId>jbpm-flow-builder</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.drools</groupId>
                    <artifactId>knowledge-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.drools</groupId>
                    <artifactId>drools-compiler</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.drools</groupId>
                    <artifactId>drools-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <!-- Servlet dependencies -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <scope>provided</scope>
        </dependency>
        
        <!-- Logging dependencies -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
        </dependency>
        
        <!-- Spring dependencies -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>
        
        <!-- CXF dependencies -->
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxws</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-transports-http</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-transports-http-jetty</artifactId>
        </dependency>
        
        <!-- Misc. dependencies -->
        <dependency>
            <groupId>javax.persistence</groupId>
            <artifactId>persistence-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.clarkparsia</groupId>
            <artifactId>Empire-core</artifactId>
        </dependency>
        
        <!-- Test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>


    <build>
        <finalName>clinical-decision-support-agent</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14</version>
                <configuration>
                    <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <!-- specify UTF-8, ISO-8859-1 or any other file encoding -->
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.2</version>
                <configuration/>

            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>7.6.0.RC2</version>


            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.1.1</version>
                <executions>
                    <execution>

                        <id>delefe-files</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>

                            <mainClass>org.h2.tools.DeleteDbFiles</mainClass>
                            <commandlineArgs>
                                -dir ~

                            </commandlineArgs>


                        </configuration>
                    </execution>
                    <execution>

                        <id>start-db</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>

                            <mainClass>org.h2.tools.Server</mainClass>
                            <arguments>
                                <argument>-tcp</argument>
                                <argument>-tcpAllowOthers</argument>
                                <argument>-tcpDaemon</argument>
                                <argument>-trace</argument>

                            </arguments>


                        </configuration>
                    </execution>

                </executions>
            </plugin>

            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>maven-jetty-plugin</artifactId>
                <configuration>
                    <stopPort>9966</stopPort>
                    <stopKey>jetty-stop</stopKey>
                    <scanIntervalSeconds>10</scanIntervalSeconds>
                </configuration>
            </plugin>


        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>













    <!--repositories>
        <repository>
            <id>JBOSS</id>
            <name>JBoss Repository</name>
            <url>https://repository.jboss.org/nexus/content/groups/public</url>
        </repository>
    </repositories-->
</project>
